Fix filter-bar's overflow

--- a/frontend-webapp/src/app/search/search.component.scss
+++ b/frontend-webapp/src/app/search/search.component.scss
@@ -5,7 +5,7 @@
   height: 40px;
   align-items: center;
   padding-bottom: 6px;
-  overflow-x: scroll;
+  overflow: hidden;
 }
 
 .filter-item {
